Fixed contrast for search container

--- a/style.css
+++ b/style.css
@@ -67,7 +67,7 @@ body {
     margin-bottom: 2rem;
     padding: 1rem;
     height: 8rem;
-    background-color: rgb(200, 200, 200);
+    background-color: #e5f5ff;
     border-radius: 5px;
   }
 
